블락킹 핸들러 테스트 코드의 유지보수성 향상 (Improve the maintainability of blocking handler test code)